<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <!--Content descriptions-->
    <string name="app_logo">LoadApp logo</string>
    <string name="fab">Floating Action Button</string>

    <!--Main activity strings-->
    <string name="option_one">Glide - Image Loading Library by BumpTech</string>
    <string name="option_two">LoadApp - Current repository by Udacity</string>
    <string name="option_three">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="error">Please select a file to download.</string>

    <!--Detail activity strings-->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="status_title">Status:</string>
    <string name="file_name_title">File name:</string>
    <string name="file_name_description">%s</string>
    <string name="status_description">%s</string>

    <!--Notification strings-->
    <string name="notification_channel_id">channel_one</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_description">%s repository is downloaded</string>
    <string name="notification_button">Check the status</string>
    <string name="status_success">Success</string>
    <string name="status_failure">Failure</string>



</resources>
