<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="targetFile"
            type="String" />

        <variable
            name="targetFileStatus"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail">

        <TextView
            android:id="@+id/file_name_title"
            style="@style/MyTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status_title"
            style="@style/MyTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/file_name_description" />

        <TextView
            android:id="@+id/file_name_description"
            style="@style/MyTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="20dp"
            android:text="@string/file_name_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/file_name_title"
            app:layout_constraintTop_toTopOf="@+id/file_name_title"
            tools:text="@string/option_one" />

        <TextView
            android:id="@+id/status_description"
            style="@style/MyTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status_description"
            app:layout_constraintBottom_toBottomOf="@+id/status_title"
            app:layout_constraintEnd_toEndOf="@+id/file_name_description"
            app:layout_constraintStart_toStartOf="@id/file_name_description"
            app:layout_constraintTop_toTopOf="@+id/status_title"
            tools:text="Success" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/ok_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>